# Hexapod

./: README.md
docker/: Dockerfile  README.md
docs/: LINKS.md
docs/hardware/: components.xlsx
docs/sys_eng/: functional_architecture.slx  physical_architecture.slx
docs/theses/: link tesi.txt
src/Arbotix_final/: Arbotix_final.ino  nuke.cpp  nuke.h
src/Bioloid_final/: BioloidController.cpp  BioloidController.h
src/Kinematics_final/: BioloidController.cpp  Communication_Setup.m  Data_Initialization.m  DefaultGaitGen.m  Gait.m  Height_Correction.m  Inverse_Kinematics.m  LegLowering.m  LegRaising.m  Leg_Angles.m  Leg_Position.m  Legs_adjust.m  Main.m  NTZ.m  NoGaitGen.m  NoTouchZone.m  Position_Correction.m  Position_and_Movement.m  Robot_Animator.m  Robot_Controller.m  Robot_Setup.m  (+2 more)
src/Kinematics_final 2/: AAAprovajoystick.m  AAAprovawebcam.m  Basic_Control.m  Communication_Setup.m  Data_Initialization.m  Force_calculation.m  Gait.m  GaitSetup.m  Main.m  P_control.m  Plot_forces.m  Plot_trajectory.m  Plot_trajectory2.m  Plot_trajectory2plus.m  Position_and_Movement.m  Replay.m  Robot_Animator.m  Robot_Controller.m  Robot_Data.m  Robot_Setup.m  Robot_Visualizator.m  Slope_detection.m  TerrainCompensation1.m  TerrainFun.m  TerrainGenerator.m  Time_and_steps.m  Track_limits.m  Track_limits2.m  esmodel.fig  forcedata.xlsx  gaitSelect.m  multiplier.m  rad2servo.m  savegif.m  trajectorydata.xlsx  trajectorydatay.xlsx  vettore_forza_R.xlsx
src/ros2_pkg/: CMakeLists.txt  package.xml
src/ros2_pkg/launch/: ros2_pkg_launch.xml
src/ros2_pkg/scripts/: test_node.py
(+8 files in other folders)
